alignment issues

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
-    margin: 60px auto;
-    width: 70%;
+    margin: 85px auto;
+    /* width: 70%; */
     background-color: #0e0916;
     color: #f0d975;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
